fixed bug of overlapping horizontal human ship placement

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ main {
   transform: translateX(-50%) translateY(-50%);
   z-index:1000;
   justify-content: center;
-  width: 200px;
+  width: 300px;
   height: 50px;
   border: 1px solid black;
   cursor: default;
